# apps/api/src/domains/plants/presentation/plants.routes.ts
@@ -253,7 +253,8 @@ export const plantsRoutes = new Elysia({ prefix: "/plants" })
               name: t.String(),
               ssid: t.Optional(t.Union([t.String(), t.Null()])),
               bssid: t.Optional(t.Union([t.String(), t.Null()])),
-              ipv4Cidr: t.Optional(t.Union([t.String(), t.Null()])),
+              publicIpv4Cidr: t.Optional(t.Union([t.String(), t.Null()])),
+              localIpv4Cidr: t.Optional(t.Union([t.String(), t.Null()])),
               notes: t.Optional(t.Union([t.String(), t.Null()])),
             }),
           ),
@@ -322,7 +323,8 @@ export const plantsRoutes = new Elysia({ prefix: "/plants" })
               name: t.String(),
               ssid: t.Optional(t.Union([t.String(), t.Null()])),
               bssid: t.Optional(t.Union([t.String(), t.Null()])),
-              ipv4Cidr: t.Optional(t.Union([t.String(), t.Null()])),
+              publicIpv4Cidr: t.Optional(t.Union([t.String(), t.Null()])),
+              localIpv4Cidr: t.Optional(t.Union([t.String(), t.Null()])),
               notes: t.Optional(t.Union([t.String(), t.Null()])),
             }),
           ),
